Bug 1202703 - Part 1 -  CreateRenderingContext can fail. r=mattwoodrow